--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ paginate: 20
 
 #### Site
 title : ChenDudo's Blog
-tagline: 山外青山楼外楼
+tagline: Don't let yesterday use up too much of today.
 assets: /assets
 url:
 baseurl:
@@ -84,19 +84,19 @@ share_to: true #enable share-to buttons if true
 
 #### Author information
 author:
-  name: Blue is color     ## e.g. wuchong Author name
-  intro_line1:  "Hello.ChenDudo 的博客开通啦！欢迎参观"    ## your introduction on the bottom of the page
-  intro_line2:  "本博客将记录工作、学习的点点滴滴."  ## the 2nd line
+  name: Chen Do     ## e.g. wuchong Author name
+  intro_line1:  "Hello, Welcome to visit!"    ## your introduction on the bottom of the page
+  intro_line2:  "This blog will record every bit of work and study."  ## the 2nd line
   weibo:      ## e.g. wuchong1014 or 2176287895 for http://weibo.com/2176287895
   weibo_verifier:  ## e.g. b3593ceb Your weibo-show widget verifier ,if you use weibo-show it is needed.
   tsina:      ## e.g. 2176287895  Your weibo ID,It will be used in share button.
   douban:     ## e.g. wuchong1014 or your id for https://www.douban.com/people/wuchong1014
   zhihu:      ## e.g. jark  for http://www.zhihu.com/people/jark
-  email:      ## e.g. imjark@gmail.com
+  email:  chendu@hhu.edu.cn    ## e.g. imjark@gmail.com
   twitter:    ## e.g. jarkwu for https://twitter.com/jarkwu
-  github:     ## e.g. wuchong for https://github.com/wuchong
+  github:  https://github.com/chendudo   ## e.g. wuchong for https://github.com/wuchong
   facebook:   ## e.g. imjark for https://facebook.com/imjark
-  linkedin:   ## e.g. wuchong1014 for https://www.linkedin.com/in/wuchong1014
+  linkedin: https://www.linkedin.com/in/%E7%9D%A3-%E9%99%88-9ba03b1b0/  ## e.g. wuchong1014 for https://www.linkedin.com/in/wuchong1014
   google_plus:    ## e.g. "111190881341800841449" for https://plus.google.com/u/0/111190881341800841449, the "" is needed!
   stackoverflow:  ## e.g. 3222790 for http://stackoverflow.com/users/3222790/jark
 ## if you set them, the corresponding  share button will show on the footer
