--- a/_config.yml
+++ b/_config.yml
@@ -94,9 +94,9 @@ author:
   zhihu:      ## e.g. jark  for http://www.zhihu.com/people/jark
   email:  chendu@hhu.edu.cn    ## e.g. imjark@gmail.com
   twitter:    ## e.g. jarkwu for https://twitter.com/jarkwu
-  github:  https://github.com/chendudo   ## e.g. wuchong for https://github.com/wuchong
+  github:  chendudo   ## e.g. wuchong for https://github.com/wuchong
   facebook:   ## e.g. imjark for https://facebook.com/imjark
-  linkedin: https://www.linkedin.com/in/%E7%9D%A3-%E9%99%88-9ba03b1b0/  ## e.g. wuchong1014 for https://www.linkedin.com/in/wuchong1014
+  linkedin: %E7%9D%A3-%E9%99%88-9ba03b1b0/  ## e.g. wuchong1014 for https://www.linkedin.com/in/wuchong1014
   google_plus:    ## e.g. "111190881341800841449" for https://plus.google.com/u/0/111190881341800841449, the "" is needed!
   stackoverflow:  ## e.g. 3222790 for http://stackoverflow.com/users/3222790/jark
 ## if you set them, the corresponding  share button will show on the footer
