--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   twitter:    ## e.g. jarkwu for https://twitter.com/jarkwu
   github:  chendudo   ## e.g. wuchong for https://github.com/wuchong
   facebook:   ## e.g. imjark for https://facebook.com/imjark
-  linkedin: %E7%9D%A3-%E9%99%88-9ba03b1b0/  ## e.g. wuchong1014 for https://www.linkedin.com/in/wuchong1014
+  linkedin:  ## e.g. wuchong1014 for https://www.linkedin.com/in/wuchong1014
   google_plus:    ## e.g. "111190881341800841449" for https://plus.google.com/u/0/111190881341800841449, the "" is needed!
   stackoverflow:  ## e.g. 3222790 for http://stackoverflow.com/users/3222790/jark
 ## if you set them, the corresponding  share button will show on the footer
